--- a/cms_styles.html
+++ b/cms_styles.html
@@ -68,9 +68,10 @@
     display:flex;
     flex-direction:column;
     gap:16px;
-    align-items:center;
+    align-items:stretch;
     padding-bottom:32px;
   }
+  .content > .view{ margin:0 auto; }
 
   .login-blocker{
     position:fixed;
