--- a/admin.html
+++ b/admin.html
@@ -471,7 +471,7 @@
     let ACCOUNTS = [];
     let selectedAccount = null;
 
-    const AUTH_STATE = { ok: false, principal: '', info: {} };
+    const AUTH_STATE = { ok: false, principal: '', info: {}, mode: '' };
 
     document.addEventListener('DOMContentLoaded', () => {
       bindMenu();
@@ -549,9 +549,11 @@
     }
 
     function setAuthState(ok, meta){
+      const prev = { ok: AUTH_STATE.ok, principal: AUTH_STATE.principal, mode: AUTH_STATE.mode };
       AUTH_STATE.ok = !!ok;
       AUTH_STATE.info = ok ? (meta || {}) : {};
       AUTH_STATE.principal = ok ? (meta?.display || meta?.principal || '') : '';
+      AUTH_STATE.mode = ok ? (meta?.mode || (meta?.menus ? 'local' : '')) : '';
 
       const status = document.getElementById('auth_status');
       if (status){
@@ -572,6 +574,17 @@
       } else {
         resetSchemaUI();
         resetAccountUI();
+      }
+
+      const changed = prev.ok !== AUTH_STATE.ok || prev.principal !== AUTH_STATE.principal || prev.mode !== AUTH_STATE.mode;
+      if (changed){
+        window.dispatchEvent(new CustomEvent(AUTH_EVENT_NAME, {
+          detail: {
+            ok: AUTH_STATE.ok,
+            mode: AUTH_STATE.mode,
+            principal: AUTH_STATE.principal
+          }
+        }));
       }
     }
 
@@ -855,9 +868,19 @@
       }, showErr);
     }
 
-    const SESS_KEY = 'WQT_CFG_SESSION';
-    const getToken = () => localStorage.getItem(SESS_KEY) || '';
-    const setToken = (t) => t ? localStorage.setItem(SESS_KEY, t) : localStorage.removeItem(SESS_KEY);
+    const SESSION_STORAGE_KEY = 'WQT_TOKEN';
+    const SESSION_EVENT_NAME = 'wqt:session-change';
+    const AUTH_EVENT_NAME = 'wqt:auth-change';
+    const getToken = () => localStorage.getItem(SESSION_STORAGE_KEY) || '';
+    const setToken = (t) => {
+      const token = t ? String(t) : '';
+      if (token){
+        localStorage.setItem(SESSION_STORAGE_KEY, token);
+      } else {
+        localStorage.removeItem(SESSION_STORAGE_KEY);
+      }
+      window.dispatchEvent(new CustomEvent(SESSION_EVENT_NAME, { detail: { token } }));
+    };
     const withSession = (payload = {}) => {
       const out = Object.assign({}, payload || {});
       const t = getToken();
