Ensure sidebar and content grid placement

--- a/cms_styles.html
+++ b/cms_styles.html
@@ -68,6 +68,16 @@
     align-items:flex-start;
   }
 
+  .app > aside.sidebar{
+    grid-column:1;
+    grid-row:1;
+  }
+
+  .app > main.content{
+    grid-column:2;
+    grid-row:1;
+  }
+
   .content{
     display:flex;
     flex-direction:column;
