Ensure login overlay spans full grid

--- a/cms_styles.html
+++ b/cms_styles.html
@@ -98,6 +98,10 @@
     z-index:200;
     padding:24px;
   }
+  #login_blocker{
+    grid-column:1 / -1;
+    grid-row:1;
+  }
   body.needs-login .app > :not(#login_blocker){ pointer-events:none; }
   .login-blocker.hidden{ display:none !important; }
   .login-blocker-card{
