Separate admin token and wrap tables for scroll

--- a/admin.html
+++ b/admin.html
@@ -868,7 +868,7 @@
       }, showErr);
     }
 
-    const SESSION_STORAGE_KEY = 'WQT_TOKEN';
+    const SESSION_STORAGE_KEY = 'WQT_ADMIN_TOKEN';
     const SESSION_EVENT_NAME = 'wqt:session-change';
     const AUTH_EVENT_NAME = 'wqt:auth-change';
     const getToken = () => localStorage.getItem(SESSION_STORAGE_KEY) || '';
